# tuneli-tui

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
mock_wg_conf/: wg0.conf
src/: main.rs
src/engine/: discovery.rs  firewall.rs  mod.rs  openvpn.rs  runner.rs  state.rs  updater.rs
src/models/: mod.rs  vpn_profile.rs
src/telemetry/: geo.rs  leak.rs  mod.rs  network.rs  ping.rs
src/ui/: add_config.rs  app.rs  input.rs  layout.rs  mod.rs  sudo_prompt.rs  tests.rs
