[package]
name = "tuneli-tui"
version = "0.1.3"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
crossterm = { version = "0.29.0", features = ["event-stream"] }
directories = "6.0.0"
futures = "0.3.32"
lazy_static = "1.5.0"
ratatui = "0.30.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
arboard = "3.4.1"
self_update = { version = "0.42.0", features = ["archive-tar", "compression-flate2", "rustls"] }
open = "5.1.2"
url = "2.5.4"

[target.'cfg(target_os = "linux")'.dependencies]
netlink-packet-route = "0.28.0"
rtnetlink = "0.20.0"
